--- a/build.gradle
+++ b/build.gradle
@@ -24,7 +24,7 @@ ext {
     junitPlatformLauncherVersion = "1.3.1"
     mockitoVersion = "2.22.0"
     swaggerVersion = "2.9.2"
-    lombokVersion = "1.18.4"
+    // lombokVersion = "1.18.4"
     modelMapperVersion = "2.3.2"
 }
 
