--- a/buildout/src/main/resources/application.properties
+++ b/buildout/src/main/resources/application.properties
@@ -4,7 +4,7 @@ logging.level.controllers.Application=ERROR
 logging.file.name=quiz_logfile.log
 management.server.ssl.enabled=false
 spring.data
-spring.data.mongodb.uri= mongodb+srv://anchal:anchal123@buildout-qa.1zpxa.mongodb.net/quiz?retryWrites=true&w=majority
+spring.data.mongodb.uri= mongodb://localhost:27017/quiz?authSource=admin
 spring.data.mongodb.field-naming-strategy=org.springframework.data.mapping.model.SnakeCaseFieldNamingStrategy
 logging.level.org.springframework.data.document.mongodb=INFO
 log4j.category.org.springframework.data.document.mongodb=INFO
